apps/drawio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:28.2.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 512Mi
