apps/drawio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drawio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drawio.stadthagen.dev`)
      kind: Rule
      services:
        - name: drawio
          port: 8080
  tls:
    secretName: drawio-tls
